# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  formatter.py  parsers.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_generate_diff.py  test_generator.py
